第二人變更 html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <header></header>
-    <main>Muji</main>
+    <main>Muji
+        <div class="container">
+            HI
+        </div>
+    </main>
 </body>
 </html>
